--- a/Northwind/appsettings.json
+++ b/Northwind/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=Northwind;Integrated Security=False;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+  "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Database=Northwind;Integrated Security=False;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
  }
