Add categories controller tests

--- a/Northwind.Tests/Northwind.Tests.csproj
+++ b/Northwind.Tests/Northwind.Tests.csproj
@@ -30,4 +30,10 @@
     <ProjectReference Include="..\Northwind\Northwind.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\SeedDatabaseScript.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
